# libiqo

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  libiqo.sublime-project
benchmark/: CMakeLists.txt  README.md  benchmark.cpp  config.h.in
include/libiqo/: AreaResizer.hpp  IQOLanczosResizer.hpp  IQOTypes.hpp  LanczosResizer.hpp  LinearResizer.hpp  Types.hpp  iqo.hpp
sample/: CMakeLists.txt  Makefile  README.md  resize_yuv420p.cpp  test.sh
src/: CMakeLists.txt  IQOAreaResizer.cpp  IQOAreaResizerImpl.hpp  IQOAreaResizerImpl_AVX2FMA.cpp  IQOAreaResizerImpl_AVX512.cpp  IQOAreaResizerImpl_Generic.cpp  IQOAreaResizerImpl_NEON.cpp  IQOAreaResizerImpl_SSE4_1.cpp  IQOHWCap.cpp  IQOHWCap.hpp  IQOLanczosResizer.cpp  IQOLanczosResizerImpl.hpp  IQOLanczosResizerImpl_AVX2FMA.cpp  IQOLanczosResizerImpl_AVX512.cpp  IQOLanczosResizerImpl_Generic.cpp  IQOLanczosResizerImpl_NEON.cpp  IQOLanczosResizerImpl_SSE4_1.cpp  IQOLinearResizer.cpp  IQOLinearResizerImpl.hpp  IQOLinearResizerImpl_AVX2FMA.cpp  IQOLinearResizerImpl_AVX512.cpp  IQOLinearResizerImpl_Generic.cpp  IQOLinearResizerImpl_NEON.cpp  IQOLinearResizerImpl_SSE4_1.cpp  Makefile  math.hpp  util.hpp
